// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiniCreditCard should render correct card issuer logo when chosen 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  proxiedProperties={
    {
      "colors": [
        4290938283,
        4286226894,
        4279967594,
      ],
      "endPoint": [
        1,
        1,
      ],
      "locations": undefined,
      "startPoint": [
        0,
        0,
      ],
    }
  }
  style={
    {
      "borderRadius": 5,
      "height": 46,
      "padding": 10,
      "width": 72,
    }
  }
>
  <Image
    source={1}
    style={
      {
        "height": 15,
        "marginLeft": "auto",
        "marginTop": "auto",
        "resizeMode": "contain",
        "width": 25,
      }
    }
  />
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`MiniCreditCard should render correctly 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  proxiedProperties={
    {
      "colors": [
        4290938283,
        4286226894,
        4279967594,
      ],
      "endPoint": [
        1,
        1,
      ],
      "locations": undefined,
      "startPoint": [
        0,
        0,
      ],
    }
  }
  style={
    {
      "borderRadius": 5,
      "height": 46,
      "padding": 10,
      "width": 72,
    }
  }
>
  <Image
    source={1}
    style={
      {
        "height": 15,
        "marginLeft": "auto",
        "marginTop": "auto",
        "resizeMode": "contain",
        "width": 25,
      }
    }
  />
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`MiniCreditCard should render with custom gradient colors when provided 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  proxiedProperties={
    {
      "colors": [
        4294901760,
        4294967040,
      ],
      "endPoint": [
        1,
        1,
      ],
      "locations": undefined,
      "startPoint": [
        0,
        0,
      ],
    }
  }
  style={
    {
      "borderRadius": 5,
      "height": 46,
      "padding": 10,
      "width": 72,
    }
  }
>
  <Image
    source={1}
    style={
      {
        "height": 15,
        "marginLeft": "auto",
        "marginTop": "auto",
        "resizeMode": "contain",
        "width": 25,
      }
    }
  />
</ViewManagerAdapter_ExpoLinearGradient>
`;
